# vscale

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: verilator.cmake
cmake/scripts/: run.cmake
cmake/templates/: verilator_CMakeLists.txt
src/test/cxx/: cli.cpp  cli.h  config.h.in  htif.cpp  htif.h  logger.cpp  logger.h  vscale_verilator_main.cpp
src/test/verilog/: vscale_dp_hasti_sram.v  vscale_sim_top.v  vscale_verilator_top.v
